<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz\nNavigator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_walk_quiz">WalkQuizActivity</string>
    <string name="title_activity_my_quiz">MyQuizActivity</string>
    <string name="title_activity_friends_quiz">FriendsQuizActivity</string>
    <string name="log_out_menu_item">Sign out</string>
    <string name="title_activity_my_map">MyMapActivity</string>
    <string name="go_map">Show map</string>
    <string name="map_placequestion">Place Question</string>
    <string name="map_traditionalmode">Show Map</string>
    <string name="map_satellitemode">Show Satellite Map</string>
    <string name="map_done">Done</string>
    <string name="map_showdistancemoved">Distance Moved</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>

</resources>