<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/blue" />
    </FrameLayout>

    <ImageView
        android:id="@+id/loginbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:src="@drawable/loginbg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginbg"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/loginbg"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/eMailField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="40dp"
            android:inputType="textPassword" >

            
        </EditText>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@android:drawable/btn_default"
            android:onClick="tryLogin"
            android:text="@string/login" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signup"
            android:gravity="center"
            android:onClick="signUpDialog"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</RelativeLayout>